logs/rivets.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CherryPy-13.1.0.dist-info'...
Listing './lib/python3.5/site-packages/Crawl-0.5.5.egg-info'...
Listing './lib/python3.5/site-packages/Lean-0.2.4.egg-info'...
Listing './lib/python3.5/site-packages/Rivets-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/cheroot'...
Listing './lib/python3.5/site-packages/cheroot/ssl'...
Listing './lib/python3.5/site-packages/cheroot/test'...
Listing './lib/python3.5/site-packages/cheroot/workers'...
Listing './lib/python3.5/site-packages/cheroot-6.0.0.dist-info'...
Listing './lib/python3.5/site-packages/cherrypy'...
Listing './lib/python3.5/site-packages/cherrypy/lib'...
Listing './lib/python3.5/site-packages/cherrypy/process'...
Listing './lib/python3.5/site-packages/cherrypy/scaffold'...
Listing './lib/python3.5/site-packages/cherrypy/scaffold/static'...
Listing './lib/python3.5/site-packages/cherrypy/test'...
Listing './lib/python3.5/site-packages/cherrypy/test/static'...
Listing './lib/python3.5/site-packages/cherrypy/tutorial'...
Listing './lib/python3.5/site-packages/crawl'...
Listing './lib/python3.5/site-packages/lean'...
Compiling './lib/python3.5/site-packages/lean/__init__.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (__init__.py, line 11)
Compiling './lib/python3.5/site-packages/lean/_css.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (_css.py, line 8)
Compiling './lib/python3.5/site-packages/lean/_mustache.py'...
***   File "./lib/python3.5/site-packages/lean/_mustache.py", line 22
    print 'rendering mustache'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/more_itertools'...
Listing './lib/python3.5/site-packages/more_itertools/tests'...
Listing './lib/python3.5/site-packages/more_itertools-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/portend-2.2.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/regex-2018.1.10.egg-info'...
Listing './lib/python3.5/site-packages/rivets'...
Listing './lib/python3.5/site-packages/rivets/assets'...
Listing './lib/python3.5/site-packages/rivets/caching'...
Compiling './lib/python3.5/site-packages/rivets/context.py'...
***   File "./lib/python3.5/site-packages/rivets/context.py", line 59
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rivets/engines'...
Compiling './lib/python3.5/site-packages/rivets/extensions.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (extensions.py, line 20)
Compiling './lib/python3.5/site-packages/rivets/manifest.py'...
***   File "./lib/python3.5/site-packages/rivets/manifest.py", line 74
    print "Skipping %s, already exists" % target
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rivets/mime'...
Listing './lib/python3.5/site-packages/rivets/processing'...
Compiling './lib/python3.5/site-packages/rivets/processing/cssmin_compressor.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cssmin_compressor.py, line 17)
Compiling './lib/python3.5/site-packages/rivets/server.py'...
***   File "./lib/python3.5/site-packages/rivets/server.py", line 34
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tempora'...
Listing './lib/python3.5/site-packages/tempora/tests'...
Listing './lib/python3.5/site-packages/tempora-1.10.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
